--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.23.11",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.4.6",
